Updated Spring Boot version Support for custom domain

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -2,4 +2,4 @@
 
 backend.mail.register.subject=Your registration at {0}
 #backend.mail.register.body=Hello [[firstname]], <br> thank you for your registration at [[domain]]. Please confirm your registration: https://www.[[domain]]/register/confirm/[[token]]
-backend.mail.register.body=Hello {0}, <br> thank you for your registration at {1}. Please confirm your registration: https://www.{2}/register/confirm/{3}
+backend.mail.register.body=Hello {0}, <br> thank you for your registration at {1}. Please confirm your registration: {2}/register/confirm/{3}
