--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,5 +1,5 @@
-
-
 backend.mail.register.subject=Your registration at {0}
-#backend.mail.register.body=Hello [[firstname]], <br> thank you for your registration at [[domain]]. Please confirm your registration: https://www.[[domain]]/register/confirm/[[token]]
-backend.mail.register.body=Hello {0}, <br> thank you for your registration at {1}. Please confirm your registration: {2}/register/confirm/{3}
+backend.mail.register.body=Hello {0}, <br> Thank you for your registration at {1}. Please confirm your registration: {2}/register/confirm/{3}
+
+backend.mail.password-reset.subject=Resetting your password
+backend.mail.password-reset.body=Hello {0}, <br> You have requested a password reset at {1}. Please visit the following link if you wish to reset your password: {2}/password/change/{3}
