Added function to view stored userdata

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -3,3 +3,6 @@ backend.mail.register.body=Hello {0}, <br> Thank you for your registration at {1
 
 backend.mail.password-reset.subject=Resetting your password
 backend.mail.password-reset.body=Hello {0}, <br> You have requested a password reset at {1}. Please visit the following link if you wish to reset your password: {2}/password/change/{3}
+
+backend.mail.userdata.subject=Your user data request
+backend.mail.userdata.body=Hello {0}, <br> You have requested receive a copy of your user data at {1}.
