Users can now delete their account in Profile

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -6,3 +6,9 @@ backend.mail.password-reset.body=Hello {0}, <br> You have requested a password r
 
 backend.mail.userdata.subject=Your user data request
 backend.mail.userdata.body=Hello {0}, <br> You have requested receive a copy of your user data at {1}.
+
+backend.mail.account-delete-request.subject=Deleting your account
+backend.mail.account-delete-request.body=Hello {0}, <br> You have requested to have your account deleted at {1}. Please visit the following link if you wish to delete your account permanently: {2}/delete-account/{3}
+
+backend.mail.account-delete-confirm.subject=Account deletion
+backend.mail.account-delete-confirm.body=Hello {0}, <br> We have deleted your account at {1}. You can always create a new account if you change your mind. We hope to hear from you again :)
