Replace hard coded strings in html files with values from properties file

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,3 +1,163 @@
+###
+### Frontend ###
+###
+
+# COMMON #
+
+app.name=Alovoa
+
+age=Age
+alerts=Alerts
+
+cancel=Cancel
+captcha=Captcha
+chats=Chats
+
+description=Description
+dob=Date of birth
+donate=Donate
+donated=Donated
+
+email=Email
+
+faq=FAQ
+filter=Filter
+first-name=First name
+
+gender=Gender
+
+imprint=Imprint
+
+kofi=Ko-fi
+
+last-active=Last active
+last-name=Last name
+login=Login
+logout=Logout
+
+meters-from-you=meters from you
+
+no-users-found=No users found
+
+password=password
+password-repeat=Repeat password
+privacy-policy=Privacy Policy
+profile=Profile
+
+search=Search
+sign-up=Sign up
+source-code=Source code
+sort=Sort
+submit=Submit
+
+tos=Terms and conditions
+
+view-profile=View Profile
+
+# TEMPLATE #
+
+profile.warning.incomplete=User profile is incomplete, you won't be seen by other users.
+profile.warning.no-profile-picture=No profile picture found!
+profile.warning.no-description=No	description found!
+profile.warning.no-dating-preference=No dating preference found! users.
+profile.warning.no-gender-preference=No gender preference found!
+profile.warning.no-location=No location found! It will be set automatically when you search for other users!
+
+delete-account.title=Delete account
+delete-account.confirm=I hereby confirm to delete this account permanently.
+
+donate.title=Delete account
+donate.notice-1=Be sure to fill in your account's email address in the message or name area.
+donate.notice-2=Use Stripe instead of PayPal because its fees are much lower.
+donate.latest-donations=Latest Donations
+donate.largest-donations=Largest Donations
+donate.donate-now=Donate now
+
+index.cookie.notice=This site uses cookies to store the session and user preferences to function properly. Your data is safe with us, as we don't store any personal information in the cookies nor do we send any information to a third party. By continuing to use this site you agree to the use of cookies.
+index.cookie.more=Click here to learn more
+index.subtitle=The platform that is specifically built for meeting new people and forming relationships
+
+index.free.title=Forever free
+index.free.description=This platform does not require you to pay any kind of fee, you are free to use all features without limitations. We solely rely on your generous donations to keep this platform running.
+index.open-source.title=Open-source
+index.open-source.description=We believe in transparency, not obfuscation. Every line of code and every used library is free and open-source,allowing everyone to view and improve on the platform if they so desire.
+index.private.title=Private and secure
+index.private.description=We do not sell any of your information to anyone, that's a promise we will always keep. Additionally, your most sensitive data is heavily encrypted and will be safe even if a data breach were to occur.
+index.ad-free.title=Ad-free
+index.ad-free.description=Ads slow down the browser, are intrusive, annoying and can potentially inject malware to your device. That's why you won't see any ads on this platform as believe that your experience is more important than our profit.
+index.technology.title=Latest technologies
+index.technology.description=We use the latest technologies so that you can benefit from the latest features the web can offer. For example, you can install this platform as a <a href="https://wikipedia.org/wiki/Progressive_web_application">progressive web application</a> directly from your browser!
+index.for-you.title=Built for you
+index.for-you.description=With advanced filters, we only show you the people that meet your criteria. That way, you spend less time searching and more time finding and meeting new people.
+index.sign-up-now=Sign up now!
+
+login.title=Login
+login.subtitle=Please login to proceed.
+login.forgot-password=Forgot password?
+
+message.title=Messages
+message.match=You got a match! Tap here to send a message :)
+
+notification.title=Notification
+notification.liked-by=You have been liked by 
+
+password-change.title=Change password
+password-change.warning=Your password needs to be at least 7 characters long and must contain characters and numbers.
+
+password-reset.title=Reset password
+
+profile.title=Profile
+profile.webpush=Receive Notifications
+profile.intention=I want...
+profile.intention.meet=to meet new people
+profile.intention.date=a relationship
+profile.intention.sex=sexual intimacy
+profile.min-age=Minimum Age
+profile.max-age=Maximum Age
+profile.gender=Looking for
+profile.gender.male=Male
+profile.gender.female=Female
+profile.gender.other=Other
+profile.userdata.request=Request user data
+profile.account.delete=Delete account
+
+register.title=Register
+#register.warning=password-change.warning
+#register.gender.male=profile.gender.male
+#register.gender.female=profile.gender.female
+#register.gender.other=profile.gender.other
+register.tos-agree=I agree to the <a href="/tos">terms and conditions</a>
+register.privacy-agree=I agree to the <a href="/privacy">privacy policy</a>
+register.asterisk-warning=Fields with an asterisk (*) cannot be changed in the future
+
+search.title=Search
+search.max-distance=Maximum distance
+search.meters=meters
+search.sort.filter.distance=Lowest distance
+search.sort.filter.active=Active date
+
+userprofile.report.confirm=Report user for violating the <a href="/tos">ToS?</a>
+userprofile.num-blocks=# Blocks by users
+userprofile.num-reports=# Reports by users
+
+
+###
+### BACKEND ###
+###
+
+# Web push #
+
+backend.webpush.like.title=New like!
+backend.webpush.like.message=Click here to find out more
+
+backend.webpush.match.title=New match!
+backend.webpush.match.message=Click here to find out more
+
+backend.webpush.message.title=New message!
+backend.webpush.message.message=Click here to find out more
+
+# MAIL #
+
 backend.mail.register.subject=Your registration at {0}
 backend.mail.register.body=Hello {0}, <br> Thank you for your registration at {1}. Please confirm your registration: {2}/register/confirm/{3}
 
