Added translation for text in js files

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -5,6 +5,11 @@
 # COMMON #
 
 app.name=Alovoa
+error.generic=An error occured. Please try again.
+success.submit.generic=Your request has been successfully submitted.
+error.max-chars.generic=You have reached the maximum number of characters.
+error.password-weak=Your password needs to be at least 7 characters long and must contain characters and numbers.
+error.password-no-match=Passwords do not match.
 
 age=Age
 alerts=Alerts
@@ -90,13 +95,21 @@ index.technology.description=We use the latest technologies so that you can bene
 index.for-you.title=Built for you
 index.for-you.description=With advanced filters, we only show you the people that meet your criteria. That way, you spend less time searching and more time finding and meeting new people.
 index.sign-up-now=Sign up now!
+index.js.confirm-registration=A confirmation email has been sent to your email address.
+index.js.registration-confirm-success=Confirmation succeeded, you can now login and meet new people in your area!
+index.js.registration-confirm-failed=Confirmation failed, please try again!
+index.js.password-reset-requested=An email for resetting your password has been sent, please check your emails and follow the instructions.
+index.js.password-change-success=Your password has been successfully changed!
+index.js.confirm-account-deleted=Your account has been successfully deleted!
 
 login.title=Login
 login.subtitle=Please login to proceed.
 login.forgot-password=Forgot password?
+login.js.error=Login failed, please check your credentials, complete the captcha and try again. A new confirmation email has been sent to you if your account hasn't been verified yet.
 
 message.title=Messages
 message.match=You got a match! Tap here to send a message :)
+message.js.error.max-length=You have reached the maximum number of characters.
 
 notification.title=Notification
 notification.liked-by=You have been liked by 
@@ -135,6 +148,7 @@ search.max-distance=Maximum distance
 search.meters=meters
 search.sort.filter.distance=Lowest distance
 search.sort.filter.active=Active date
+search.js.error.no-geolocation=Your browser does not support HTML5 geolocation. Please try with another browser.
 
 userprofile.report.confirm=Report user for violating the <a href="/tos">ToS?</a>
 userprofile.num-blocks=# Blocks by users
