Added missing translation for placeholder text in html files

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -42,6 +42,7 @@ logout=Logout
 
 meters-from-you=meters from you
 
+new-password=New password
 no-users-found=No users found
 
 password=password
@@ -153,7 +154,9 @@ search.js.error.no-geolocation=Your browser does not support HTML5 geolocation. 
 userprofile.report.confirm=Report user for violating the <a href="/tos">ToS?</a>
 userprofile.num-blocks=# Blocks by users
 userprofile.num-reports=# Reports by users
-
+userprofile.js.block-user=Block user?
+userprofile.js.unblock-user=Unblock user?
+userprofile.js.success.report-user=User has been successfully reported!
 
 ###
 ### BACKEND ###
