Lots of bug fixes and  UI improvements for mobile

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -19,6 +19,7 @@ captcha=Captcha
 chats=Chats
 
 description=Description
+distance=Distance
 dob=Date of birth
 donate=Donate
 donated=Donated
@@ -33,6 +34,8 @@ gender=Gender
 
 imprint=Imprint
 
+km=km
+km-from-you=km from you
 kofi=Ko-fi
 
 last-active=Last active
@@ -40,12 +43,11 @@ last-name=Last name
 login=Login
 logout=Logout
 
-meters-from-you=meters from you
 
 new-password=New password
 no-users-found=No users found
 
-password=password
+password=Password
 password-repeat=Repeat password
 privacy-policy=Privacy Policy
 profile=Profile
@@ -146,7 +148,6 @@ register.asterisk-warning=Fields with an asterisk (*) cannot be changed in the f
 
 search.title=Search
 search.max-distance=Maximum distance
-search.meters=meters
 search.sort.filter.distance=Lowest distance
 search.sort.filter.active=Active date
 search.js.error.no-geolocation=Your browser does not support HTML5 geolocation. Please try with another browser.
