Improved mobile view greatly Added experimental dark mode Several critical bug fixes

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -18,6 +18,7 @@ cancel=Cancel
 captcha=Captcha
 chats=Chats
 
+dark=Dark
 description=Description
 distance=Distance
 dob=Date of birth
@@ -40,9 +41,9 @@ kofi=Ko-fi
 
 last-active=Last active
 last-name=Last name
+light=Light
 login=Login
 logout=Logout
-
 
 new-password=New password
 no-users-found=No users found
@@ -59,6 +60,7 @@ sort=Sort
 submit=Submit
 
 tos=Terms and conditions
+theme=Theme
 
 view-profile=View Profile
 
@@ -66,7 +68,7 @@ view-profile=View Profile
 
 profile.warning.incomplete=User profile is incomplete, you won't be seen by other users.
 profile.warning.no-profile-picture=No profile picture found!
-profile.warning.no-description=No	description found!
+profile.warning.no-description=No description found!
 profile.warning.no-dating-preference=No dating preference found! users.
 profile.warning.no-gender-preference=No gender preference found!
 profile.warning.no-location=No location found! It will be set automatically when you search for other users!
