Adding and removing interests

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -34,6 +34,7 @@ first-name=First name
 gender=Gender
 
 imprint=Imprint
+interests=Interests
 
 km=km
 km-from-you=km from you
@@ -138,6 +139,7 @@ profile.gender.female=Female
 profile.gender.other=Other
 profile.userdata.request=Request user data
 profile.account.delete=Delete account
+profile.interest.info=Only characters, digits and minus (-) allowed. Must be between 3 and 30 characters long. Maximum 5 interests.
 
 register.title=Register
 #register.warning=password-change.warning
