Added filtering by interests and donations

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -34,6 +34,7 @@ first-name=First name
 gender=Gender
 
 imprint=Imprint
+interest=Interest
 interests=Interests
 
 km=km
@@ -154,6 +155,8 @@ search.title=Search
 search.max-distance=Maximum distance
 search.sort.filter.distance=Lowest distance
 search.sort.filter.active=Active date
+search.sort.filter.interests=Interests
+search.sort.filter.donations=Donations
 search.js.error.no-geolocation=Your browser does not support HTML5 geolocation. Please try with another browser.
 
 userprofile.report.confirm=Report user for violating the <a href="/tos">ToS?</a>
