User can now add and filter by interests (default max is 5) User can now add multiple images besides their profile image (default max is 4)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -141,6 +141,7 @@ profile.gender.other=Other
 profile.userdata.request=Request user data
 profile.account.delete=Delete account
 profile.interest.info=Only characters, digits and minus (-) allowed. Must be between 3 and 30 characters long. Maximum 5 interests.
+profile.js.delete-image.confirm=Delete selected image?
 
 register.title=Register
 #register.warning=password-change.warning
