Added detailed Exceptions when registering Fixed several visual issues

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -171,6 +171,13 @@ userprofile.js.success.report-user=User has been successfully reported!
 ### BACKEND ###
 ###
 
+# Errors #
+
+backend.error.captcha.invalid=Invalid captcha
+backend.error.register.min-age=Minimum age not reached
+backend.error.register.email-exists=Email address is already registered
+backend.error.register.email-spam=Email domain is blacklisted for spam
+
 # Web push #
 
 backend.webpush.like.title=New like!
