Added FAQ page (more entries needed) Added language selector to footer

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -41,6 +41,7 @@ km=km
 km-from-you=km from you
 kofi=Ko-fi
 
+language=Language
 last-active=Last active
 last-name=Last name
 light=Light
@@ -166,6 +167,20 @@ userprofile.num-reports=# Reports by users
 userprofile.js.block-user=Block user?
 userprofile.js.unblock-user=Unblock user?
 userprofile.js.success.report-user=User has been successfully reported!
+
+faq.title=FAQ
+faq.privacy.question=Is my data really private?
+faq.privacy.answer=Yes. Your data is not shared with a third-party.
+faq.encryption.question=How is my data encrypted?
+faq.encryption.answer=The AES standard encryption is used.
+faq.open-source.question=What does open-source mean? Why is this project open-source?
+faq.open-source.answer=Open-source basically means that anyone can see how every part of the software was created, anyone can add changes and help finding bugs. We believe open-source is the future of all technology.
+faq.match.question=I can't get any matches, any tips?
+faq.match.answer=Add clear and unedited pictures to your profile. Tell people what you like adn what you are looking for in the description.
+faq.no-users.question=There are no users in my area!
+faq.no-users.answer=You can try in a few days, new users will be in your area eventaully. Additionally, you can donate or tell your family and friends to make this platform even more popular!
+
+
 
 ###
 ### BACKEND ###
