Added imprint with fake data and a contact form (for legal reasons)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -10,6 +10,8 @@ success.submit.generic=Your request has been successfully submitted.
 error.max-chars.generic=You have reached the maximum number of characters.
 error.password-weak=Your password needs to be at least 7 characters long and must contain characters and numbers.
 error.password-no-match=Passwords do not match.
+success.generic=Success!
+
 
 age=Age
 alerts=Alerts
@@ -17,6 +19,7 @@ alerts=Alerts
 cancel=Cancel
 captcha=Captcha
 chats=Chats
+contact=Contact
 
 dark=Dark
 description=Description
@@ -47,6 +50,8 @@ last-name=Last name
 light=Light
 login=Login
 logout=Logout
+
+message=Message
 
 new-password=New password
 no-users-found=No users found
@@ -180,7 +185,7 @@ faq.match.answer=Add clear and unedited pictures to your profile. Tell people wh
 faq.no-users.question=There are no users in my area!
 faq.no-users.answer=You can try in a few days, new users will be in your area eventaully. Additionally, you can donate or tell your family and friends to make this platform even more popular!
 
-
+imprint.title=Imprint
 
 ###
 ### BACKEND ###
