--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -67,7 +67,7 @@ source-code=Source code
 sort=Sort
 submit=Submit
 
-tos=Terms and conditions
+tos=Terms of Service
 theme=Theme
 
 view-profile=View Profile
@@ -154,8 +154,8 @@ register.title=Register
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
 #register.gender.other=profile.gender.other
-register.tos-agree=I agree to the <a href="/tos">terms and conditions</a>
-register.privacy-agree=I agree to the <a href="/privacy">privacy policy</a>
+register.tos-agree=I agree to the <a href="/tos">Terms of Service</a>
+register.privacy-agree=I agree to the <a href="/privacy">Privacy Policy</a>
 register.asterisk-warning=Fields with an asterisk (*) cannot be changed in the future
 
 search.title=Search
@@ -166,7 +166,7 @@ search.sort.filter.interests=Interests
 search.sort.filter.donations=Donations
 search.js.error.no-geolocation=Your browser does not support HTML5 geolocation. Please try with another browser.
 
-userprofile.report.confirm=Report user for violating the <a href="/tos">ToS?</a>
+userprofile.report.confirm=Report user for violating the <a href="/tos">Terms of Service</a>?
 userprofile.num-blocks=# Blocks by users
 userprofile.num-reports=# Reports by users
 userprofile.js.block-user=Block user?
@@ -180,12 +180,18 @@ faq.encryption.question=How is my data encrypted?
 faq.encryption.answer=The AES standard encryption is used.
 faq.open-source.question=What does open-source mean? Why is this project open-source?
 faq.open-source.answer=Open-source basically means that anyone can see how every part of the software was created, anyone can add changes and help finding bugs. We believe open-source is the future of all technology.
+faq.safari.question=I'm using the Safari browser and something's not working!
+faq.safari.answer=Due to the restricted nature of the Safari browser, it is not officially supported. If you're on macOS we recommend using Firefox. Safari does not support Web Push Notifications on any platform, please request this feature <a href="https://developer.apple.com/bug-reporting/">here</a>.
 faq.match.question=I can't get any matches, any tips?
 faq.match.answer=Add clear and unedited pictures to your profile. Tell people what you like adn what you are looking for in the description.
 faq.no-users.question=There are no users in my area!
 faq.no-users.answer=You can try in a few days, new users will be in your area eventaully. Additionally, you can donate or tell your family and friends to make this platform even more popular!
 
 imprint.title=Imprint
+
+privacy.title=Privacy
+
+tos.title=Terms of service
 
 ###
 ### BACKEND ###
@@ -225,3 +231,12 @@ backend.mail.account-delete-request.body=Hello {0}, <br> You have requested to h
 
 backend.mail.account-delete-confirm.subject=Account deletion
 backend.mail.account-delete-confirm.body=Hello {0}, <br> We have deleted your account at {1}. You can always create a new account if you change your mind. We hope to hear from you again :)
+
+
+
+
+
+# Text blocks 
+
+backend.privacy=<h3>Privacy Policy</h3><p>This privacy policy will explain how our organization uses the personal data we collect from you when you use our website.</p><h3>What data do we collect?</h3><p>COMPANY_NAME collects the following data:</p><ul><li>Personal identification information (Name, email address, birth date, etc.)</li><li>Your location and preferences</li><li>Any interaction you have with another user</li></ul><h3>How do we collect your data?</h3><p>You directly provide COMPANY_NAME with most of the data we collect. We collect data and process data when you:</p><ul><li>Register online or place an order for any of our products or services.</li><li>Voluntarily complete a customer survey or provide feedback on any of our message boards or via email.</li><li>Use or view our website via your browser's cookies.</li></ul><h3>How will we use your data?</h3><p>COMPANY_NAME collects your data so that we can:</p><ul><li>Manage your account.</li><li>Email you with important changes and news</li><li>Allow other users to find you</li></ul><h3>How do we store your data?</h3><p>COMPANY_NAME securely stores your data in a secure database.</p><p>COMPANY_NAME will keep your personal data for unlimited time. You can request to delete your data at all times.</p><p>COMPANY_NAME would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following:</p><p><strong>The right to access</strong> – You have the right to request COMPANY_NAME for copies of your personal data. We may charge you a small fee for this service.</p><p><strong>The right to rectification</strong> – You have the right to request that COMPANY_NAME correct any information you believe is inaccurate. You also have the right to request COMPANY_NAME to complete the information you believe is incomplete.</p><p><strong>The right to erasure</strong> – You have the right to request that COMPANY_NAME erase your personal data, under certain conditions.</p><p><strong>The right to restrict processing</strong> - You have the right to request that COMPANY_NAME restrict the processing of your personal data, under certain conditions.</p><p><strong>The right to object to processing</strong> – You have the right to object to COMPANY_NAME – processing of your personal data, under certain conditions.</p><p><strong>The right to data portability</strong> – You have the right to request that COMPANY_NAME transfer the data that we have collected to another organization, or directly to you, under certain conditions.</p><p>If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please follow the instruction on how to contact us at the bottom of this page.</p><h3>Cookies</h3><p>Cookies are text files placed on your computer to collect standard Internet log information and visitor behavior information. When you visit our websites, we may collect information from you automatically through cookies or similar technology</p><p>For further information, visit allaboutcookies.org.</p><h3>How do we use cookies?</h3><p>COMPANY_NAME uses cookies in a range of ways to improve your experience on our website, including:</p><ul><li>Keeping you signed in</li></ul><h3>What types of cookies do we use?</h3><p>There are a number of different types of cookies, however, our website uses:</p><ul><li>Functionality – COMPANY_NAME uses these cookies so that we recognize you on our website and remember your previously selected preferences. These could include what language you prefer and location you are in.</li></ul><h3>How to manage cookies</h3><p>You can set your browser not to accept cookies, and the above website tells you how to remove cookies from your browser. However, in a few cases, some of our website features may not function as a result.</p><h3>Privacy policies of other websites</h3><p>The COMPANY_NAME website contains links to other websites. Our privacy policy applies only to our website, so if you click on a link to another website, you should read their privacy policy.</p><h3>Changes to our privacy policy</h3><p>COMPANY_NAME keeps its privacy policy under regular review and places any updates on this web page. This privacy policy was last updated on PRIVACY_UPDATE_DATE.</p><h3>How to contact us</h3><p>If you have any questions about COMPANY_NAME's privacy policy, the data we hold on you, or you would like to exercise one of your data protection rights, please do not hesitate to contact us <a href="/imprint">here</a></p>
+backend.tos=<h3>Terms of Service</h3><p>Updated on TOS_UPDATE_DATE</p><h3>1. Introduction</h3><p> By using our Services, you accept the Terms of Service, which may be updated from time to time and our Privacy Policy. If you do not accept and agree to be bound by all of the terms, please do not use our services.</p><h3>2. Eligibility</h3><p>You must be at least MIN_AGE years of age to create an account and use the service. By creating an account and using the service, you represent and warrant that:</p><ul>you can form a binding contract with COMPANY_NAME,<li>you are at least MIN_AGE years old</li><li>you do not have more than one account on our services</li><li>you will comply with this agreement and all national and international laws</li><li>you have never been found guilty for a sex crime or violent-related crime</li><li>you treat others with a respectful manner</li><li>you only upload data that belongs to you</li><li>you do not impersonate another person</li><li>you do not share illegal content</li><li>you do not share links in your public profile</li><li>you do not harass, bully, stalk, intimidate, assault, defame, harm or otherwise mistreat any person</li><li>you do not upload sexual implicit or explicit pictures</li><li>you have not previously been removed from our services</li></ul><h3>4. Your content</h3><p>You are solely responsible and liable for any content that you upload. By uploading your content you acknowledge that you own all the rights to do so.</p><h3>5. Privacy</h3><p>For all information regarding privacy, please read the Privacy Policy.</p><h3>6. Donations & Refunds</h3><p>COMPANY_NAME only receives donations and does not sell any virtual good or subscriptions. Donations are not refundable, except when it’s required by the country you reside in.</p><h3>7. Our rights</h3><p>We reserve the right to terminate you account at all times without prior notification.</p><h3>8. Disclainer</h3><p>COMPANY_NAME PROVIDES THE SERVICE ON AN “AS IS” AND “AS AVAILABLE” BASIS AND TO THE EXTENT PERMITTED BY APPLICABLE LAW, GRANTS NO WARRANTIES OF ANY KIND, WHETHER EXPRESS, IMPLIED, STATUTORY OR OTHERWISE WITH RESPECT TO THE SERVICE (INCLUDING ALL CONTENT CONTAINED THEREIN), INCLUDING, WITHOUT LIMITATION, ANY IMPLIED WARRANTIES OF SATISFACTORY QUALITY, MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE OR NON-INFRINGEMENT. COMPANY_NAME DOES NOT REPRESENT OR WARRANT THAT THE SERVICE WILL BE UNINTERRUPTED, SECURE OR ERROR FREE, ANY DEFECTS OR ERRORS IN THE SERVICE WILL BE CORRECTED, OR THAT ANY CONTENT OR INFORMATION YOU OBTAIN ON OR THROUGH THE SERVICE WILL BE ACCURATE. COMPANY_NAME TAKES NO RESPONSIBILITY FOR ANY CONTENT THAT YOU OR ANOTHER USER OR THIRD PARTY POSTS, SENDS, OR RECEIVES THROUGH OUR SERVICES NOR DOES COMPANY_NAME TAKE ANY RESPONSIBILITY FOR THE IDENTITY, INTENTIONS, LEGITIMACY, OR VERACITY OF ANY USERS WITH WHOM YOU MAY COMMUNICATION THROUGH COMPANY_NAME. ANY MATERIAL DOWNLOADED OR OTHERWISE OBTAINED THROUGH THE USE OF OUR SERVICES IS ACCESSED AT YOUR OWN DISCRETION AND RISK. COMPANY_NAME IS NOT RESPONSIBLE FOR ANY DAMAGE TO YOUR COMPUTER HARDWARE, COMPUTER SOFTWARE, OR OTHER EQUIPMENT OR TECHNOLOGY INCLUDING, BUT WITHOUT LIMITATION, DAMAGE FROM ANY SECURITY BREACH OR FROM ANY VIRUS, BUGS, TAMPERING, FRAUD, ERROR, OMISSION, INTERRUPTION, DEFECT, DELAY IN OPERATION OR TRANSMISSION, COMPUTER LINE OR NETWORK FAILURE, OR ANY OTHER TECHNICAL OR OTHER MALFUNCTION.</p>
