Many major bug fixes Improved dark theme Admin area frontend

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -19,6 +19,7 @@ alerts=Alerts
 cancel=Cancel
 captcha=Captcha
 chats=Chats
+comment=Comment
 contact=Contact
 
 dark=Dark
@@ -61,11 +62,14 @@ password-repeat=Repeat password
 privacy-policy=Privacy Policy
 profile=Profile
 
+reports=Reports
+
 search=Search
 sign-up=Sign up
 source-code=Source code
 sort=Sort
 submit=Submit
+subject=Subject
 
 tos=Terms of Service
 theme=Theme
@@ -192,6 +196,16 @@ imprint.title=Imprint
 privacy.title=Privacy
 
 tos.title=Terms of service
+
+admin.title=Administration
+admin-delete-contact=Delete contact
+admin.delete-report=Delete report
+admin.ban-user=Ban user
+admin.ban-user.confirm=You are about to remove a user permanently from the platform. Are you sure?
+admin.mail.send-single=Send email
+admin.mail.send-all=Send email to all
+admin.mail.send-all.confirm=You are about to send an email to all users. Are you sure?
+
 
 ###
 ### BACKEND ###
