Enable basic logging

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -127,6 +127,7 @@ login.js.error=Login failed, please check your credentials, complete the captcha
 message.title=Messages
 message.match=You got a match! Tap here to send a message :)
 message.js.error.max-length=You have reached the maximum number of characters.
+message.js.video.confirm=Invite chat partner to video chat?
 
 notification.title=Notification
 notification.liked-by=You have been liked by 
@@ -220,13 +221,13 @@ backend.error.register.email-spam=Email domain is blacklisted for spam
 
 # Web push #
 
-backend.webpush.like.title=New like!
+backend.webpush.like.subject=New like!
 backend.webpush.like.message=Click here to find out more
 
-backend.webpush.match.title=New match!
+backend.webpush.match.subject=New match!
 backend.webpush.match.message=Click here to find out more
 
-backend.webpush.message.title=New message!
+backend.webpush.message.subject=New message!
 backend.webpush.message.message=Click here to find out more
 
 # MAIL #
