Added full support for oauth register and login with Google and Facebook

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -122,6 +122,8 @@ index.js.confirm-account-deleted=Your account has been successfully deleted!
 login.title=Login
 login.subtitle=Please login to proceed.
 login.forgot-password=Forgot password?
+login.oauth.google=Sign in with Google
+login.oauth.facebook=Sign in with Facebook
 login.js.error=Login failed, please check your credentials, complete the captcha and try again. A new confirmation email has been sent to you if your account hasn't been verified yet.
 
 message.title=Messages
@@ -162,6 +164,8 @@ register.title=Register
 register.tos-agree=I agree to the <a href="/tos">Terms of Service</a>
 register.privacy-agree=I agree to the <a href="/privacy">Privacy Policy</a>
 register.asterisk-warning=Fields with an asterisk (*) cannot be changed in the future
+register.oauth.google=Sign up with Google
+register.oauth.facebook=Sign up with Facebook
 
 search.title=Search
 search.max-distance=Maximum distance
