Added French translation! Machine translated Fixed some German translations

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -13,7 +13,7 @@ success.generic=Erfolg!
 
 
 age=Alter
-alerts=Warnungen
+alerts=Alarme
 
 cancel=Abbrechen
 captcha=Captcha
@@ -28,7 +28,7 @@ dob=Geburtsdatum
 donate=Spenden
 donated=Gespendet
 
-email=Email
+email=E-mail
 
 faq=FAQ
 filter=Filter
@@ -173,7 +173,7 @@ search.sort.filter.interests=Interessen
 search.sort.filter.donations=Spenden
 search.js.error.no-geolocation=Dein Browser unterstützt keine HTML5-Geolokalisierung. Bitte versuche es mit einem anderen Browser.
 
-userprofile.report.confirm=Nutzer wegen Verstoßes gegen die <a href="/tos">Dienstbedingungen</a> melden?
+userprofile.report.confirm=Nutzer wegen Verstoßes gegen die <a href="/tos">Nutzungsbedingungen</a> melden?
 userprofile.num-blocks=# Blocken durch Nutzer
 userprofile.num-reports=# Meldungen durch Nutzer
 userprofile.js.block-user=Nutzer blocken?
@@ -185,7 +185,7 @@ faq.privacy.question=Sind meine Daten wirklich privat?
 faq.privacy.answer=Ja, Ihre Daten werden nicht an Dritte weitergegeben.
 faq.encryption.question=Wie werden meine Daten verschlüsselt?
 faq.encryption.answer=Es wird die Verschlüsselung nach dem AES-Standard verwendet.
-faq.open-source.question=Was bedeutet open-Source? Warum ist dieses Projekt open-Source?
+faq.open-source.question=Was bedeutet open-Source? Warum ist dieses Projekt open-source?
 faq.open-source.answer=Open-Source bedeutet im Grunde genommen, dass jeder sehen kann, wie jeder Teil der Software entstanden ist, jeder Änderungen hinzufügen und bei der Fehlersuche helfen kann. Wir glauben, dass open-Source die Zukunft aller Technologien ist.
 faq.safari.question=Ich benutze den Safari-Browser und etwas funktioniert nicht!
 faq.safari.answer=Aufgrund der eingeschränkten Natur des Safari-Browsers wird dieser nicht offiziell unterstützt. Wenn Sie unter MacOS arbeiten, empfehlen wir die Verwendung von Firefox. Safari unterstützt Web-Push-Benachrichtigungen auf keiner Plattform, bitte fordere diese Funktion <a href="https://developer.apple.com/bug-reporting/">hier</a> an.
