Added Portuguese translation! (Machine translated) Fixed some older translations

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -244,7 +244,7 @@ backend.mail.userdata.subject=Ihre Anforderung der Benutzerdaten
 backend.mail.userdata.body=Hallo {0}, <br> You hast eine Kopie deiner Daten bei {1} beantragt.
 
 backend.mail.account-delete-request.subject=Deleting your account
-backend.mail.account-delete-request.body=Hello {0}, <br> You have requested to have your account deleted at {1}. Please visit the following link if you wish to delete your account permanently: {2}/delete-account/{3}
+backend.mail.account-delete-request.body=Hallo {0}, <br> Du hast die Löschung Ihres Kontos bei {1} beantragt. Bitte besuche den folgenden Link, wenn du dein Konto dauerhaft löschen lassen möchtest: {2}/delete-account/{3}
 
 backend.mail.account-delete-confirm.subject=Kontolöschung
 backend.mail.account-delete-confirm.body=Hallo {0}, <br> Wir haben dein Konto bei {1} gelöscht. Du kannst jederzeit ein neues Konto erstellen, falls du deine Meinung änderst. Wir hoffen wieder von dir zu hören :)
