--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -246,7 +246,7 @@ backend.mail.userdata.body=Hola {0}, <br> Ha solicitado una copia de sus datos e
 backend.mail.account-delete-request.subject=Eliminación de su cuenta
 backend.mail.account-delete-request.body=Hola {0}, <br> Ha solicitado que se elimine su cuenta en {1}. Por favor, visite el siguiente enlace si desea eliminar su cuenta de forma permanente: {2}/delete-account/{3}
 
-backend.mail.account-delete-confirm.subject=Kontolöschung
+backend.mail.account-delete-confirm.subject=Eliminación de la cuenta
 backend.mail.account-delete-confirm.body=Hola {0}, <br> Hemos borrado su cuenta en {1}. Siempre puedes crear una nueva cuenta si cambias de opinión. Esperamos tener noticias suyas de nuevo :)
 
 
