--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -125,7 +125,7 @@ login.oauth.google=Iniciar sesión con Google
 login.oauth.facebook=Iniciar sesión con Facebook
 login.js.error=Falló la entrada, por favor compruebe los datos de entrada, rellene el captcha e inténtelo de nuevo. Se ha enviado un nuevo correo electrónico de confirmación si su cuenta aún no ha sido verificada.
 message.title=Noticias
-message.match=¡Una cerilla! ¡Alguien te quiere de vuelta! Escriba aquí para enviar un mensaje :)
+message.match=¡Una match! ¡Alguien te quiere de vuelta! Escriba aquí para enviar un mensaje :)
 message.js.error.max-length=Número máximo de caracteres alcanzados.
 message.js.video.confirm=¿Invitar a un compañero de chat a un video chat?
 
