Added Russion translation! (Machine translated)

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -89,7 +89,7 @@ delete-account.confirm=Ich bestätige hiermit, mein Konto endgültig zu löschen
 
 donate.title=Spenden
 donate.notice-1=Achten darauf, die E-Mail-Adresse von deinem Konto im Nachrichten- oder Namensbereich einzutragen.
-donate.notice-2=Verwenden Sie Stripe anstelle von PayPal, da die Gebühren viel niedriger sind.
+donate.notice-2=Verwende Stripe anstelle von PayPal, da die Gebühren viel niedriger sind.
 donate.latest-donations=Neueste Spenden
 donate.largest-donations=Größte Spenden
 donate.donate-now=Jetzt spenden
@@ -119,7 +119,7 @@ index.js.password-change-success=Dein Passwort wurde erfolgreich geändert!
 index.js.confirm-account-deleted=Dein Konto wurde erfolgreich gelöscht!
 
 login.title=Anmelden
-login.subtitle=Bitte loggen Sie sich ein, um fortzufahren.
+login.subtitle=Bitte logge dich ein, um fortzufahren.
 login.forgot-password=Passwort vergessen?
 login.oauth.google=Anmelden mit Google
 login.oauth.facebook=Anmelden mit Facebook
@@ -188,7 +188,7 @@ faq.encryption.answer=Es wird die Verschlüsselung nach dem AES-Standard verwend
 faq.open-source.question=Was bedeutet open-Source? Warum ist dieses Projekt open-source?
 faq.open-source.answer=Open-Source bedeutet im Grunde genommen, dass jeder sehen kann, wie jeder Teil der Software entstanden ist, jeder Änderungen hinzufügen und bei der Fehlersuche helfen kann. Wir glauben, dass open-Source die Zukunft aller Technologien ist.
 faq.safari.question=Ich benutze den Safari-Browser und etwas funktioniert nicht!
-faq.safari.answer=Aufgrund der eingeschränkten Natur des Safari-Browsers wird dieser nicht offiziell unterstützt. Wenn Sie unter MacOS arbeiten, empfehlen wir die Verwendung von Firefox. Safari unterstützt Web-Push-Benachrichtigungen auf keiner Plattform, bitte fordere diese Funktion <a href="https://developer.apple.com/bug-reporting/">hier</a> an.
+faq.safari.answer=Aufgrund der eingeschränkten Natur des Safari-Browsers wird dieser nicht offiziell unterstützt. Wenn du MacOS verwendest, empfehlen wir die Verwendung von Firefox. Safari unterstützt Web-Push-Benachrichtigungen auf keiner Plattform, bitte fordere diese Funktion <a href="https://developer.apple.com/bug-reporting/">hier</a> an.
 faq.match.question=Ich bekomme keine Matches, irgendwelche Tipps?
 faq.match.answer=Benutze klare und unbearbeitete Bilder zu deinem Profil hinzu. Teilen in deiner Beschreibung, was dir gefällt und wonach du suchst.
 faq.no-users.question=In meinem Gebiet gibt es keine Nutzer!
