Fixed minor translation issues

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -64,7 +64,7 @@ profile=Profil
 reports=Rapports
 
 search=Recherchez
-sign-up=Connexion
+sign-up=S'inscrire
 source-code=Code source
 sort=Trier
 submit=Envoyer
