--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -64,7 +64,7 @@ profile=Profilo
 reports=Rapporti
 
 search=Ricerca
-sign-up=Accedi
+sign-up=Registrati
 source-code=Codice sorgente
 sort=Ordina
 submit=Invia
