--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -48,7 +48,7 @@ language=Idioma
 last-active=Último activo
 last-name=Sobrenome
 light=Brilhante
-login=Iniciar Sessão
+login=Entrar
 logout=Sair
 
 message=Mensagem
@@ -64,7 +64,7 @@ profile=Perfil
 reports=Relatórios
 
 search=Pesquisa
-sign-up=Iniciar Sessão
+sign-up=Registar
 source-code=Código fonte
 sort=Ordenar
 submit=Enviar
