--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -64,7 +64,7 @@ profile=Профиль
 reports=Доклады
 
 search=Поиск
-sign-up=Вход
+sign-up=Записаться
 source-code=Исходный код
 sort=Сортировать
 submit=Отправить
