Added Korean translation (Machine translated!) Fixed some minor translation issues

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -140,8 +140,8 @@ password-reset.title=Passwort zurücksetzen
 profile.title=Profil
 profile.webpush=Benachrichtigungen erhalten
 profile.intention=I möchte...
-profile.intention.meet=neue Leute kennen lernen
-profile.intention.date=eine romatische Beziehung
+profile.intention.meet=neue Leute kennenlernen
+profile.intention.date=eine romantische Beziehung
 profile.intention.sex=sexuelle Intimität
 profile.min-age=Min. Alter
 profile.max-age=Max. Alter
