Added ability to upload custom audio Better performance due not loading user media if not needed

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -12,7 +12,6 @@ error.password-weak=Your password needs to be at least 7 characters long and mus
 error.password-no-match=Passwords do not match.
 success.generic=Success!
 
-
 age=Age
 alerts=Alerts
 
@@ -154,6 +153,10 @@ profile.gender.other=Other
 profile.userdata.request=Request user data
 profile.account.delete=Delete account
 profile.interest.info=Only characters, digits and minus (-) allowed. Must be between 3 and 30 characters long. Maximum 5 interests.
+profile.audio=Custom audio
+profile.audio.info=Upload a short audio for your visitors. You can upload anything - sound effects, your voice or part of your favourite song! 
+profile.audio.delete=Delete audio?
+
 profile.js.delete-image.confirm=Delete selected image?
 
 register.title=Register
