--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -152,6 +152,10 @@ profile.gender.other=Andere
 profile.userdata.request=Nutzerdaten anfordern
 profile.account.delete=Konto löschen
 profile.interest.info=Nur Zeichen, Ziffern und Minus (-) erlaubt. Muss zwischen 3 und 30 Zeichen lang sein. Maximal 5 Interessen.
+profile.audio=Dein Audio
+profile.audio.info=Lade ein kurzes Audio für deine Besucher hoch. Du kannst alles hochladen - Soundeffekte, deine Stimme oder einen Teil deines Lieblingssongs! 
+profile.audio.delete=Audio löschen?
+
 profile.js.delete-image.confirm=Ausgewähltes Bild löschen?
 
 register.title=Registrieren
