--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -152,6 +152,10 @@ profile.gender.other=Otros
 profile.userdata.request=Solicitar datos de usuario
 profile.account.delete=Eliminar la cuenta
 profile.interest.info=Sólo se permiten caracteres, dígitos y menos (-). Debe tener entre 3 y 30 caracteres de largo. Máximo 5 intereses.
+profile.audio=Audio personalizado
+profile.audio.info=Sube un audio corto para tus visitantes. Puedes subir cualquier cosa: efectos de sonido, tu voz o parte de tu canción favorita.
+profile.audio.delete=¿Borrar el audio?
+
 profile.js.delete-image.confirm=¿Borrar la imagen seleccionada?
 
 register.title=Registrarse
