--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -152,6 +152,10 @@ profile.gender.other=Autres
 profile.userdata.request=Demande de données utilisateur
 profile.account.delete=Supprimer le compte
 profile.interest.info=Seuls les caractères, les chiffres et le moins (-) sont autorisés. Doit comporter entre 3 et 30 caractères. Maximum 5 intérêts.
+profile.audio=Audio personnalisé
+profile.audio.info=Téléchargez une courte bande audio pour vos visiteurs. Vous pouvez télécharger n'importe quoi - des effets sonores, votre voix ou une partie de votre chanson préférée ! 
+profile.audio.delete=Effacer l'audio ?
+
 profile.js.delete-image.confirm=Supprimer l'image sélectionnée ?
 
 register.title=S'inscrire
