--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -152,6 +152,10 @@ profile.gender.other=Altro
 profile.userdata.request=Richiesta dati utente
 profile.account.delete=Cancellare il conto
 profile.interest.info=Sono ammessi solo caratteri, cifre e meno (-). Deve avere una lunghezza compresa tra i 3 e i 30 caratteri. Massimo 5 interessi.
+profile.audio=Audio personalizzato
+profile.audio.info=Carica un breve audio per i tuoi visitatori. Potete caricare qualsiasi cosa - effetti sonori, la vostra voce o parte della vostra canzone preferita!
+profile.audio.delete=Eliminare l'audio?
+
 profile.js.delete-image.confirm=Cancellare l'immagine selezionata?
 
 register.title=Registrati
