--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -152,6 +152,10 @@ profile.gender.other=その他
 profile.userdata.request=ユーザーデータを要求する
 profile.account.delete=アカウントの削除
 profile.interest.info=文字、数字、マイナス（-）のみ使用可能です。3文字以上30文字以内であること。最大5つの関心事。
+profile.audio=カスタムオーディオ
+profile.audio.info=あなたの訪問者のための短いオーディオをアップロードします。あなたは何をアップロードすることができます - 効果音、あなたの声やお気に入りの曲の一部を
+profile.audio.delete=オーディオを削除する？
+
 profile.js.delete-image.confirm=選択した画像を削除しますか？
 
 register.title=登録
