--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -152,6 +152,10 @@ profile.gender.other=Outros
 profile.userdata.request=Pedir dados do utilizador
 profile.account.delete=Apagar conta
 profile.interest.info=Só são permitidos caracteres, dígitos e menos (-). Deve ter entre 3 e 30 caracteres. Máximo de 5 interesses.
+profile.audio=Áudio personalizado
+profile.audio.info=Carregue um pequeno áudio para os seus visitantes. Pode carregar qualquer coisa - efeitos sonoros, a sua voz ou parte da sua canção favorita!
+profile.audio.delete=Apagar áudio?
+
 profile.js.delete-image.confirm=Apagar imagem seleccionada?
 
 register.title=Registar
