--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -152,6 +152,10 @@ profile.gender.other=其他
 profile.userdata.request=索取用户数据
 profile.account.delete=删除账户
 profile.interest.info=只允许使用字符、数字和减号（-）。长度必须在3到30个字符之间。最多5个利益。
+profile.audio=定制音频
+profile.audio.info=为您的访客上传一段简短的音频。您可以上传任何东西 - 音效，您的声音或您最喜欢的歌曲的一部分! 
+profile.audio.delete=删除音频？
+
 profile.js.delete-image.confirm=删除所选图像？
 
 register.title=注册
