--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -151,6 +151,10 @@ profile.gender.other=다른
 profile.userdata.request=사용자 데이터 요청
 profile.account.delete=계정 삭제
 profile.interest.info=문자, 숫자 및 마이너스 (-) 만 허용됩니다. 3 ~ 30 자 사이 여야합니다. 최대 5 개의 관심사.
+profile.audio=커스텀 오디오
+profile.audio.info=방문자를 위해 짧은 오디오를 업로드하십시오. 음향 효과, 음성 또는 좋아하는 노래의 일부 등 무엇이든 업로드 할 수 있습니다!
+profile.audio.delete=오디오를 삭제 하시겠습니까?
+
 profile.js.delete-image.confirm=선택한 사진을 삭제 하시겠습니까?
 
 register.title=등록하다
