--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -152,6 +152,10 @@ profile.gender.other=Другое
 profile.userdata.request=Запросить данные пользователя
 profile.account.delete=Удалить учетную запись
 profile.interest.info=Допускаются только символы, цифры и минус (-). Должно быть от 3 до 30 символов. Максимум 5 процентов.
+profile.audio=Индивидуальный звук
+profile.audio.info=Загрузите короткий звук для ваших посетителей. Вы можете загрузить все, что угодно - звуковые эффекты, голос или часть любимой песни!
+profile.audio.delete=Удалить аудио?
+
 profile.js.delete-image.confirm=Удалить выбранное изображение?
 
 register.title=Зарегистрироваться
